2004-11-25  Werner Koch  <wk@g10code.com>

	Released 0.6.8.

2004-09-27  Werner Koch  <wk@g10code.com>

	* config.sub, config.guess: Updated. 

2004-06-23  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Check for <sys/uio.h>.

2004-06-08  Werner Koch  <wk@gnupg.org>

	Released 0.6.6.

2004-04-02  Thomas Schwinge  <schwinge@nic-nac-project.de>

	* autogen.sh: Added ACLOCAL_FLAGS.

2004-02-20  Werner Koch  <wk@gnupg.org>

	Released 0.6.4.

2004-02-11  Werner Koch  <wk@gnupg.org>

	* autogen.sh (check_version): Removed bashism and simplified.

2004-01-29  Werner Koch  <wk@gnupg.org>

	Released 0.6.3.

2003-12-18  Werner Koch  <wk@gnupg.org>

	Released 0.6.2.

2003-12-08  Werner Koch  <wk@gnupg.org>

	* TODO: New.
	* Makefile.am: Add README.CVS and autogen.sh.  Removed m4/Makefile.
	* README.CVS: New.
	* autogen.sh: Revamped.
	* configure.ac: Add automake version number for autogen.sh use.

2003-11-17  Werner Koch  <wk@gnupg.org>

	Released 0.6.1.

2003-08-06  Werner Koch  <wk@gnupg.org>

	Released 0.6.0.

2003-07-29  Werner Koch  <wk@gnupg.org>

	* configure.ac: Cleanups for newer autoconf.

2003-07-29  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.
	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in,

2003-04-28  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): New variable.
	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in,

2003-02-18  Neal H. Walfield  <neal@g10code.de>

	* COPYING: New file.

2003-02-18  Neal H. Walfield  <neal@g10code.de>

	* configure.ac: Fix typo.
	(AC_CONFIG_FILES): Remove common/Makefile.am.
	* common: Remove directory.

2003-02-18  Neal H. Walfield  <neal@g10code.de>

	* common: New directory.
	* Makefile.am (SUBDIRS): Add common.

	* configure.ac: Check for funopen.  If not present, check for
	fopencookie and implement it in terms of that.  Otherwise, fail.
	(AC_CONFIG_FILES): Add common/Makefile.
